--- a/src/main/resources/templates/appointment.html
+++ b/src/main/resources/templates/appointment.html
@@ -26,10 +26,10 @@
                     <select class="form-control" th:value="${appointment.location}" name="location" id="location"
                             >
                         <option disabled="disabled" selected="selected" > -- select the location --</option>
-                        <option>Boston</option>
-                        <option>New York</option>
-                        <option>Chicago</option>
-                        <option>San Francisco</option>
+                        <option>Brussels</option>
+                        <option>Antwerp</option>
+                        <option>Liege</option>
+                        <option>Ostende</option>
                     </select>
                 </div>
 
